services/trilium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trilium
  template:
    metadata:
      labels:
        app: trilium
    spec:
      volumes:
        - name: trilium-data
          persistentVolumeClaim:
            claimName: trilium-pvc
      containers:
      - name: trilium
        image: zadam/trilium:0.63.7
        volumeMounts:
          - mountPath: /home/node/trilium-data
            name: trilium-data
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/health-check
            port: 8080
            httpHeaders:
              - name: Host
                value: 127.0.0.1
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 2
        resources:
          limits:
            memory: 300Mi
            cpu: '0.01'
          requests:
            memory: 200Mi
            cpu: '0.005'
