services/trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium-service
spec:
  selector:
    app: trilium
  ports:
  - port: 8080
